instagram photos as background of header

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -55,7 +55,8 @@ hr.star-primary {
 
 header {
 	text-align: center;
-	background: url('../img/background.jpg') @brand-primary;
+	// background: url('../img/background.jpg') @brand-primary;
+	background: @brand-primary;
   background-size: cover;
 	color: white;
 	.container {
