center instagram background image

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -58,6 +58,7 @@ header {
 	// background: url('../img/background.jpg') @brand-primary;
 	background: @brand-primary;
   background-size: cover;
+  background-position: center;
 	color: white;
 	.container {
 		padding-top: 100px;
