--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -7063,6 +7063,7 @@ header {
   text-align: center;
   background: #2c3e50;
   background-size: cover;
+  background-position: center;
   color: white;
 }
 header .container {
